--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,3 +1,11 @@
+body
+{
+    overflow-x:hidden;
+    font-family: "Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif;
+}
+::-webkit-scrollbar {
+    width: 0px;
+}
 #topBar
 {
     position:fixed;
@@ -5,7 +13,7 @@
     z-index:2;
     left:0;
     width:100vw;
-    height:100px;
+    height:10vh;
     background:rgb(65,64,66);
 }
 #logo
@@ -15,29 +23,68 @@
     height:70%;
     width:6vw;
     left:5vw;
-    background-image:url(graphics/logo3.svg);
+    background-image:url(graphics/logo.svg);
     background-size: contain;
     background-repeat:no-repeat;
 }
 .slide
 {
     position:absolute;
-    width:98.75vw;
+    width:100vw;
     height:100vh;
     left:0;
+    text-align: center;
     z-index:0;
+}
+@keyframes appearHint
+{
+    0% {bottom:-7vh;}
+    100% {bottom:5vh;}
 }
 #scrollHint
 {
     position:fixed;
+    display:inline-block;
+    margin-left:-6vw;
     z-index:1;
-    bottom:5vh;
-    left:49vw;
-    width:2vw;
-    height:2.3vw;
-    background-image:url(graphics/downarrow.svg);
-    background-size:100%;
-    background-repeat:no-repeat;
+    bottom:-5vh;
+    width:12vw;
+    height:6.2vh;
+    overflow:visible;
+    -webkit-clip-path:circle(3.1vh at 50% 50%);
+    -webkit-transition:-webkit-clip-path 0.8s 0.6s;
+    -webkit-animation:appearHint 0.5s cubic-bezier(.17,.67,.56,1.38) 0.5s forwards paused;
+    -moz-animation:appearHint 0.5s cubic-bezier(.17,.67,.56,1.38) 0.5s forwards paused;
+    -o-animation:appearHint 0.5s cubic-bezier(.17,.67,.56,1.38) 0.5s forwards paused;
+    animation:appearHint 0.5s cubic-bezier(.17,.67,.56,1.38) 0.5s forwards paused;
+}
+#scrollHint span
+{
+    float:left;
+    margin:3.1vh 10px;
+    line-height: 0px;
+    color:white;
+    font-style:italic;
+}
+#downarr
+{
+    height:100%;
+    overflow:visible;
+    float:left;
+}
+#hintSelector
+{
+    position:absolute;
+    top:1%;
+    left:-6%;
+    height:96%;
+    width:110%;
+    border-radius:50%;
+    cursor:pointer;
+}
+a
+{
+    display:block;
 }
 #pageSelector
 {
@@ -45,9 +92,18 @@
     z-index:1;
     right:3vw;
     top:45vh;
-    height:10vh;
+    height:78px;
     width:15px;
     display:block;
+}
+#pageSelectorButtons
+{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    -webkit-clip-path:circle(10px at 7.5px 8.5px);
 }
 .pageSelect
 {
@@ -59,37 +115,108 @@
     padding:1px 0;
     cursor:pointer;
 }
-#page0
+.pageSelectButton
 {
+    width:100%;
+    height:17.5px;
     background-image:url(graphics/pagebtn1.svg);
+    background-size:100%;
+    background-repeat:no-repeat;
+    padding:1px 0;
+    cursor:pointer;
 }
-#s0
+#home
 {
     top:0vh;
+    background-color:rgb(0,173,239);
     background-image:-webkit-linear-gradient(left,rgb(0,140,206) 0%,rgb(0,173,239) 50%,rgb(0,140,206) 100%);
-    /*background:rgb(0,173,239);*/
+    background-image:-moz-linear-gradient(left,rgb(0,140,206) 0%,rgb(0,173,239) 50%,rgb(0,140,206) 100%);
+    background-image:-o-linear-gradient(left,rgb(0,140,206) 0%,rgb(0,173,239) 50%,rgb(0,140,206) 100%);
+    background-image:linear-gradient(to right,rgb(0,140,206) 0%,rgb(0,173,239) 50%,rgb(0,140,206) 100%);
 }
-#s1
+#about
 {
     top:100vh;
+    background-color:rgb(239,64,54);
     background-image:-webkit-linear-gradient(left,rgb(206,31,21) 0%, rgb(239,64,54) 50%, rgb(206,31,21) 100%);
+    background-image:-moz-linear-gradient(left,rgb(206,31,21) 0%, rgb(239,64,54) 50%, rgb(206,31,21) 100%);
+    background-image:-o-linear-gradient(left,rgb(206,31,21) 0%, rgb(239,64,54) 50%, rgb(206,31,21) 100%);
+    background-image:linear-gradient(to right,rgb(206,31,21) 0%, rgb(239,64,54) 50%, rgb(206,31,21) 100%);
 }
-#s2
+#projects
 {
     top:200vh;
+    background-color:rgb(80,229,80);
     background-image:-webkit-linear-gradient(left,rgb(40,189,40) 0%, rgb(80,229,80) 50%, rgb(40,189,40) 100%);
+    background-image:-moz-linear-gradient(left,rgb(40,189,40) 0%, rgb(80,229,80) 50%, rgb(40,189,40) 100%);
+    background-image:-o-linear-gradient(left,rgb(40,189,40) 0%, rgb(80,229,80) 50%, rgb(40,189,40) 100%);
+    background-image:linear-gradient(to right,rgb(40,189,40) 0%, rgb(80,229,80) 50%, rgb(40,189,40) 100%);
 }
-#s3
+#contact
 {
     top:300vh;
+    background-color:rgb(225,221,40);
     background-image:-webkit-linear-gradient(left,rgb(185,181,0) 0%, rgb(225,221,40) 50%, rgb(185,181,0) 100%);
+    background-image:-moz-linear-gradient(left,rgb(185,181,0) 0%, rgb(225,221,40) 50%, rgb(185,181,0) 100%);
+    background-image:-o-linear-gradient(left,rgb(185,181,0) 0%, rgb(225,221,40) 50%, rgb(185,181,0) 100%);
+    background-image:linear-gradient(to right,rgb(185,181,0) 0%, rgb(225,221,40) 50%, rgb(185,181,0) 100%);
 }
 #copyright
 {
     position:absolute;
     top:400vh;
     height:30px;
-    width:98.75vw;
+    width:100vw;
     left:0;
+    padding:0px;
     background:rgb(65,64,66);
+}
+#credits
+{
+    position:absolute;
+    line-height: 10px;
+    font-weight:500;
+    display:block;
+    color:rgb(190,191,189);
+    margin:10px auto 10px 10px;
+}
+.contents
+{
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:60vw;
+    height:80vh;
+    margin:0 20vw;
+    padding:10vh 5px;
+    text-align:center;
+}
+#homeContents
+{
+    height:60vh;
+    padding-top:30vh;
+}
+h1, span
+{
+    cursor:default;
+}
+.titleText
+{
+    top:10px;
+    font-size:36pt;
+    color:white;
+    display:inline-block;
+    margin:0;
+    line-height: 50px;
+}
+#nameUnderline
+{
+    width:50%;
+    margin:10px 25%;
+    border-bottom: 1px solid white;
+}
+#subtitle
+{
+    color:rgb(65,64,66);
+    font-weight:600;
 }
