--- a/indexStyle-mobile.css
+++ b/indexStyle-mobile.css
@@ -14,13 +14,12 @@
 }
 body
 {
-    overflow-x:scroll;
+    overflow-x:hidden;
 }
 #contentPage
 {
-    overflow-x:visible;
+    overflow-x:hidden;
     position:fixed;
-    box-sizing:border-box;
 }
 #scrollHint span
 {
@@ -94,8 +93,7 @@ body
     width:31vh;
     cursor:default;
     background-color:rgba(65,64,66,1);
-    /*background-image:-webkit-linear-gradient(left,rgb(65,64,66) 0%,rgb(65,64,66) 95%,rgb(0,0,0) 100%);*/
-    -webkit-box-shadow:inset -6px 0px 10px -5px black;
+    -webkit-box-shadow:inset -7px 0px 30px -10px black;
     -webkit-transition:left 0.2s;
 }
 .menuItem
@@ -121,4 +119,12 @@ body
 .menuItem li:hover
 {
     background-color:none;
+}
+.contents
+{
+    width:98vw;
+    height:80vh;
+    margin:0;
+    padding:10vh 1vw;
+    text-align:center;
 }
