--- a/indexStyle-mobile.css
+++ b/indexStyle-mobile.css
@@ -86,11 +86,11 @@ body
     overflow:hidden;
     top:0vh;
     z-index:1;
-    padding:15vh 0vh 0vh 4vh;
+    padding:15vh 0vh 0vh 0vh;
     left:-35vh;
     margin:0;
     height:85vh;
-    width:31vh;
+    width:35vh;
     cursor:default;
     background-color:rgba(65,64,66,1);
     -webkit-box-shadow:inset -7px 0px 30px -10px black;
@@ -99,10 +99,27 @@ body
 .menuItem
 {
     display:block;
-    padding:1vh 0;
+    padding:1vh 0 0 4vh;
     margin:0;
     text-decoration: none;
     cursor:pointer;
+    border-top:1px solid rgba(80,80,80,1);
+    border-bottom:1px solid rgba(30,30,30,1);
+}
+.menuItem:first-child
+{
+    border-top:none;
+}
+.menuItem:last-child
+{
+    border-bottom:1px solid rgba(80,80,80,1);
+}
+.menuItem:last-child::after
+{
+    content:'';
+    display:block;
+    margin-left:-4vh;
+    border-bottom:1px solid rgba(30,30,30,1);
 }
 .menuItem li
 {
@@ -113,7 +130,7 @@ body
     padding:5vh 2vh;
     margin:0;
     border-radius:10px;
-    background-color:rgba(65,64,66,0.0);
+    background-color:none;
     -webkit-transition:background-color 0.2s;
 }
 .menuItem li:hover
