Bug fix and improvements
Scroll when resizing bug fixed. Slight responsiveness improvements. New
icon.

--- a/indexStyle-mobile.css
+++ b/indexStyle-mobile.css
@@ -180,6 +180,12 @@ body
 .titleText
 {
     font-size:32pt;
+    line-height:32pt;
+}
+.subtitle
+{
+    font-size:12pt;
+    line-height:12pt;
 }
 .titleText.light
 {
