--- a/indexStyle.css
+++ b/indexStyle.css
@@ -196,50 +196,53 @@ a
 #pageSelectorClip
 {
     position:absolute;
-    top:3px;
-    left:3px;
-    width:10px;
-    height:10px;
-    border-radius:5px;
+    top:0px;
+    left:0px;
+    width:15px;
+    height:15px;
+    border-radius:8px;
     overflow:hidden;
 }
 #pageSelectorButtons
 {
     position:absolute;
-    top:-3px;
-    left:-3px;
+    top:0px;
+    left:0px;
     width:15px;
     height:78px;
 }
 .pageSelect
 {
-    width:100%;
-    height:17.5px;
+    width:15px;
+    height:15px;
     background-image:url(graphics/pagebtn0.svg);
-    background-size:100%;
+    background-size:contain;
     background-repeat:no-repeat;
-    padding:1px 0;
+    background-position:center;
+    padding:3px 0;
+    margin:0;
     cursor:pointer;
 }
 .pageSelectButton
 {
-    width:100%;
-    height:17.5px;
+    width:15px;
+    height:15px;
     background-image:url(graphics/pagebtn1.svg);
     background-size:100%;
     background-repeat:no-repeat;
-    padding:1px 0;
+    background-position:center;
+    padding:3px 0;
     cursor:pointer;
 }
 #home
 {
     top:0vh;
-    background-color:rgb(0,173,239);
-    background-image:-webkit-linear-gradient(150deg,rgb(0,173,239) 0%,rgb(0,120,186) 100%);
-    background-image:-moz-linear-gradient(150deg,rgb(0,173,239) 0%,rgb(0,120,186) 100%);
-    background-image:-ms-linear-gradient(150deg,rgb(0,173,239) 0%,rgb(0,120,186) 100%);
-    background-image:-o-linear-gradient(150deg,rgb(0,173,239) 0%,rgb(0,120,186) 100%);
-    background-image:linear-gradient(150deg,rgb(0,173,239) 0%,rgb(0,120,186) 100%);
+    background-color:rgb(20,156,228);
+    background-image:-webkit-linear-gradient(150deg,rgb(40,183,255) 0%,rgb(0,130,202) 100%);
+    background-image:-moz-linear-gradient(150deg,rgb(40,183,255) 0%,rgb(0,130,202) 100%);
+    background-image:-ms-linear-gradient(150deg,rgb(40,183,255) 0%,rgb(0,130,202) 100%);
+    background-image:-o-linear-gradient(150deg,rgb(40,183,255) 0%,rgb(0,130,202) 100%);
+    background-image:linear-gradient(150deg,rgb(40,183,255) 0%,rgb(0,130,202) 100%);
 }
 #about
 {
@@ -302,11 +305,6 @@ a
     padding:0vh 5px;
     text-align:center;
 }
-#homeContents
-{
-    height:70vh;
-    padding-top:15vh;
-}
 #aboutContents
 {
     text-align:center;
@@ -334,6 +332,8 @@ h1, span
     padding:10px 15px;
     border-radius:3px;
     background:rgb(65,64,66);
+    font-size:13pt;
+    line-height:13pt;
     font-weight:normal;
     box-shadow:0 4px 3px -3px black, inset 0 1px 2px 0px rgba(230,230,210,0.3), inset 0 2px 5px 0px rgba(230,230,210,0.15);
     display:inline-block;
@@ -342,13 +342,20 @@ h1, span
 {
     background:rgb(85,84,86);
 }
-#myPicture
+#picContainer
 {
     position:absolute;
+    text-align:center;
     bottom:0;
-    margin-bottom:-1px;
-    /*left:5vw;*/
-    right:40vmax;
+    left:-30%;
+    width:100%;
+}
+#myPicture
+{
+    position:relative;
+    display:inline-block;
+    margin-bottom:-5px;
+    /*left:0;*/
     /*width:45vw;*/
     width:94.2vmin;
     z-index:1;
@@ -359,30 +366,17 @@ h1, span
 }
 .textBox
 {
-    background:rgb(240,240,220);
-    margin-left:45vw;
+    text-align:left;
+    margin-left:40%;
+    margin-top:30vh;
+    left:0;
     padding:20px;
-    width:30vw;
-    border-radius:10px 10px 10px 0;
-}
-.textBox::after
-{
-    content:'';
-    display:block;
-    position:inherit;
-    width:0;
-    height:0;
-    z-index:0;
-    margin-bottom:-20px;
-    margin-left:-49px;
-    border-top:15px solid transparent;
-    border-left:15px solid transparent;
-    border-right:15px solid rgb(240,240,220);
-    border-bottom:15px solid rgb(240,240,220);
+    width:54vw;
 }
 .titleText
 {
     top:10px;
+    font-size:44pt;
     font-size:4vmax;
     display:inline-block;
     margin:0;
@@ -391,20 +385,26 @@ h1, span
 .titleText.light
 {
     color:white;
-    text-shadow:1px 1px 1px rgba(205,204,206,0.9),
-        2px 2px 1px rgba(185,184,186,0.9);
+    /*text-shadow:1px 1px 1px rgba(205,204,206,0.9),
+        2px 2px 1px rgba(185,184,186,0.9);*/
 }
 .titleText.dark
 {
     color:rgba(65,64,66,1);
-    text-shadow:1px 1px 1px rgba(85,84,86,0.9),
-        2px 2px 1px rgba(105,104,106,0.9);
+    /*text-shadow:1px 1px 1px rgba(85,84,86,0.9),
+        2px 2px 1px rgba(105,104,106,0.9);*/
 }
-.titleText.accent
+.textBox .titleText.dark
 {
-    color:rgba(255,84,84,1);
-    text-shadow:1px 1px 1px rgba(255,104,104,0.9),
-        2px 2px 1px rgba(255,124,124,0.5);
+    font-weight:normal;
+    font-size:8.5vmin;
+    line-height:8.5vmin;
+}
+.textBox .titleText.light
+{
+    font-size:12.75vmin;
+    line-height:12.75vmin;
+    margin-left:-2px;
 }
 .accent
 {
@@ -412,18 +412,12 @@ h1, span
     font-weight:bold;
     text-shadow:1px 1px 1px rgba(255,240,80,0.6);
 }
-#nameUnderline
-{
-    width:80%;
-    margin:10px 10%;
-    border-bottom: 1px solid rgba(65,64,66,0.6);
-}
 .subtitle
 {
-    font-size:1.3vmax;
-    line-height:1.3vmax;
+    font-size:3.2vmin;
+    line-height:4.3vmin;
     color:rgb(65,64,66);
-    font-weight:600;
+    font-weight:bold;
 }
 .bigSubtitle
 {
@@ -457,7 +451,7 @@ h1, span
     color:rgb(245,244,246);
     font-size:14pt;
     line-height:16pt;
-    font-weight:100;
+    font-weight:normal;
 }
 #aboutInfo
 {
@@ -536,11 +530,11 @@ h1, span
     position:absolute;
     width:100%;
     height:100%;
-    background: rgba(255,84,84,0.8);
-    background: -webkit-radial-gradient(right, circle farthest-side,  rgba(225,54,54,0.8) 0%, rgba(225,54,54,0.8) 80%, rgba(255,84,84,0.8) 100%);
-    background: -moz-radial-gradient(right, circle farthest-side,  rgba(225,54,54,0.8) 0%, rgba(225,54,54,0.8) 80%, rgba(255,84,84,0.8) 100%);
-    background: -ms-radial-gradient(right, circle farthest-side,  rgba(225,54,54,0.8) 0%, rgba(225,54,54,0.8) 80%, rgba(255,84,84,0.8) 100%);
-    background: -o-radial-gradient(right, circle farthest-side,  rgba(225,54,54,0.8) 0%, rgba(225,54,54,0.8) 80%, rgba(255,84,84,0.8) 100%);
+    background: rgba(255,210,50,1);
+    background: -webkit-radial-gradient(right, circle farthest-side,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
+    background: -moz-radial-gradient(right, circle farthest-side,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
+    background: -ms-radial-gradient(right, circle farthest-side,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
+    background: -o-radial-gradient(right, circle farthest-side,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
     background: radial-gradient(circle farthest-side at right,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
     -webkit-transform-origin:   100% 50%;
     -moz-transform-origin:      100% 50%;
@@ -553,11 +547,11 @@ h1, span
     position:absolute;
     width:100%;
     height:100%;
-    background: rgba(255,84,84,0.8);
-    background: -webkit-radial-gradient(left, circle farthest-side,  rgba(225,54,54,0.8) 0%, rgba(225,54,54,0.8) 80%, rgba(255,84,84,0.8) 100%);
-    background: -moz-radial-gradient(left, circle farthest-side,  rgba(225,54,54,0.8) 0%, rgba(225,54,54,0.8) 80%, rgba(255,84,84,0.8) 100%);
-    background: -ms-radial-gradient(left, circle farthest-side,  rgba(225,54,54,0.8) 0%, rgba(225,54,54,0.8) 80%, rgba(255,84,84,0.8) 100%);
-    background: -o-radial-gradient(left, circle farthest-side,  rgba(225,54,54,0.8) 0%, rgba(225,54,54,0.8) 80%, rgba(255,84,84,0.8) 100%);
+    background: rgba(255,210,50,1);
+    background: -webkit-radial-gradient(left, circle farthest-side,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
+    background: -moz-radial-gradient(left, circle farthest-side,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
+    background: -ms-radial-gradient(left, circle farthest-side,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
+    background: -o-radial-gradient(left, circle farthest-side,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
     background: radial-gradient(circle farthest-side at left,  rgba(225,180,20,1) 0%, rgba(225,180,20,1) 80%, rgba(255,210,50,1) 100%);
     -webkit-transform-origin:   0% 50%;
     -moz-transform-origin:      0% 50%;
@@ -1085,8 +1079,8 @@ h1, span
 #or
 {
     position:absolute;
-    top:46.5%;
-    left:39%;
+    top:47%;
+    left:39.25%;
     font-size:24pt;
 }
 #socialForm
@@ -1175,7 +1169,8 @@ textarea
     resize:none;
     width:100%;
     height:40%;
-    line-height:13pt;
+    line-height:15pt;
+    padding:10px;
     overflow: auto;
 }
 #textareaNotif
